# Car_acceptability

./: Car project GCP.ipynb  README.md  car.csv  model.pkl
api/: Modello.ipynb  key.json  main.py  predict.ipynb  predict.py  pyproject.toml  train.py
