[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Guglielmo Berzano <guglielmo.berzano@studenti.unimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "1.0"
uvicorn = "^0.22.0"
fastapi = "^0.95.2"
pandas = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
